# grove-x

./: README.md
doc/: Google Python Style Guide.chm  django-1.8-tutorial.txt  how_to_build.txt  sougou.txt
src/: CMakeLists.txt  CMakeLists.txt~  build.sh
src/base/: CMakeLists.txt  CurrentThread.h  GLogHelper.h  JsonHelper.h  JsonMacro.h  Mutex.h  MysqlQueryHelper.h  MysqlWrapperPool.h  OdbConnectionPool.h  OdbWrapperPool.h  RandomUtil.h  RedisLock.h  RedisWrapperPool.h  Singleton.h  Slug8.h  System.h  ThriftClient.h  ThriftHelper.h  ThriftServer.h  XMLPrinterHTML5.h  XmlHelper.h  ctime.h  except_proc.h  mysqlwrapper.h  noncopyable.hpp  rediswrapper.h
src/base/libweb/: CMakeLists.txt  weball.h  webdef.h  webgeneral.cpp  webgeneral.h  webpage.cpp  webpage.h  webparam.cpp  webparam.h
src/base/redismq/: CMakeLists.txt
src/base/tinyxml2/: CMakeLists.txt
src/rpc/: CMakeLists.txt  CMakeLists.txt~
src/rpc/config/daemon/: coupon_store_server.json  feed_server_sample.conf  httpd_server_sample.conf  onsale_store_server.json  sms_server_sample.conf  tag_server_sample.conf
src/rpc/config/supervisor/: feed_server.conf  sms_server.conf  tag_server.conf
src/rpc/fast-cgi/: CMakeLists.txt
src/rpc/fast-cgi/admin/: CMakeLists.txt  CmdHandler.h  Command.h  Login.hpp  main.cc  nginx.conf  run.sh
src/rpc/fast-cgi/admin/html/: login.html
src/rpc/fast-cgi/echo/: CMakeLists.txt  Echo.hpp  README.md  gen.sh  main.cc  nginx.conf  run.sh  stop.sh
src/rpc/fast-cgi/echo/sdk-cpp/echo/: echoCmd_constants.cpp  echoCmd_constants.h  echoCmd_types.cpp  echoCmd_types.h  httpCmd_constants.h  httpCmd_types.cpp  httpCmd_types.h
src/rpc/fast-cgi/echo/sdk-py/: HttpClient.py  ThriftHelper.py  test_echo.py
src/rpc/fast-cgi/echo/sdk-py/gen_py/EchoCmd/: ttypes.py
src/rpc/fast-cgi/util/: CmdHandler.h  Command.h  gen.sh
src/rpc/fast-cgi/util/gen_cpp/: httpCmd_constants.cpp
src/rpc/fast-cgi/util/gen_py/HttpCmd/: ttypes.py
src/rpc/idl/: coupon.thrift  couponAdmin.thrift  couponEC.thrift  couponPush.thrift  echoCmd.thrift  httpCmd.thrift  onsale.thrift  onsaleAdmin.thrift  onsaleEC.thrift
src/rpc/orm/: onsale.hxx  person.hxx
src/rpc/servers/: CMakeLists.txt  CMakeLists.txt~
src/rpc/servers/aux-py/: .gitignore  README.md  ecsite.sql
src/rpc/servers/aux-py/doc/: README.txt  install-nginx.txt  nginx.conf
src/rpc/servers/coupon/: CMakeLists.txt  CouponAdminServer.cc  CouponAdminServiceHandler.hpp  CouponBatchDispatchServer.cc  CouponBatchExportServer.cc  CouponCode.h  CouponConfig.h  CouponConst.h  CouponECServer.cc  CouponECServiceHandler.hpp  CouponHelper.h  CouponPushServer.cc  CouponPushServiceHandler.hpp  CouponUtil.h  gen.sh  package.sh  run_admin.sh  run_batch_dispatch.sh  run_batch_export.sh  run_ec.sh  run_nginx.sh  run_push.sh  stop_all.sh
src/rpc/servers/coupon/sdk-cpp/admin/: CouponAdminService.cpp  CouponAdminService.h  CouponAdminService_server.skeleton.cpp  couponAdmin_constants.cpp  couponAdmin_constants.h  couponAdmin_types.cpp  couponAdmin_types.h  coupon_constants.cpp  coupon_constants.h
src/rpc/servers/coupon/sdk-cpp/ec/: CouponECService.cpp  CouponECService.h  CouponECService_server.skeleton.cpp  couponEC_constants.cpp  couponEC_constants.h  couponEC_types.cpp  couponEC_types.h  coupon_types.cpp
src/rpc/servers/coupon/sdk-cpp/push/: CouponPushService.cpp  CouponPushService.h  CouponPushService_server.skeleton.cpp  couponPush_constants.cpp  couponPush_constants.h  couponPush_types.cpp  couponPush_types.h  coupon_types.h
src/rpc/servers/coupon/sdk-py/: CouponAdminClient.py  CouponECClient.py  CouponPushClient.py  ThriftClient.py  benchmark_ec.py  json_to_simpleJson.py  test_admin.py  test_ec.py  test_push.py
src/rpc/servers/coupon/sdk-py/gen_py/coupon/: ttypes.py
src/rpc/servers/coupon/sdk-py/gen_py/couponAdmin/: CouponAdminService-remote  CouponAdminService.py  __init__.py  ttypes.py
src/rpc/servers/coupon/sdk-py/gen_py/couponEC/: CouponECService-remote  CouponECService.py  __init__.py  ttypes.py
src/rpc/servers/coupon/sdk-py/gen_py/couponPush/: CouponPushService-remote  CouponPushService.py  __init__.py  ttypes.py
src/rpc/servers/coupon/test/: CMakeLists.txt  test_coupon_code.cc  test_decode.cc  test_deslug.cc  test_deslug8.cc  test_encode.cc  test_group_slug.cc  test_html5_printer.cc  test_multi_table.cc  test_p26.cc  test_redismq.cc  test_slug8.cc  test_sort.cc  test_thrift_client.cc  test_xml.cc  utf8test.xml
src/rpc/servers/hello/: CMakeLists.txt  driver.cxx  gen.sh
src/rpc/servers/hello/person/: person-odb.cxx  person-odb.hxx  person-odb.ixx  person.sql  person.xml
src/rpc/servers/onsale/: CMakeLists.txt  OnsaleAdminServer.cc  OnsaleAdminServiceHandler.hpp  OnsaleConfig.hpp  OnsaleConst.hpp  OnsaleConvert.hpp  OnsaleECServer.cc  OnsaleECServiceHandler.hpp  OnsaleHelper.hpp  OnsaleLabelServer.cc  OnsaleUtil.hpp  gen.sh  package.sh  run_admin.sh  run_ec.sh  run_label.sh  stop_all.sh
src/rpc/servers/onsale/orm_onsale/: onsale-odb.cxx  onsale-odb.hxx  onsale-odb.ixx  onsale.sql
src/rpc/servers/onsale/sdk-cpp/admin/: OnsaleAdminService.cpp  OnsaleAdminService.h  OnsaleAdminService_server.skeleton.cpp  onsaleAdmin_constants.cpp  onsaleAdmin_constants.h  onsaleAdmin_types.cpp  onsaleAdmin_types.h  onsale_types.cpp  onsale_types.h
src/rpc/servers/onsale/sdk-cpp/ec/: OnsaleECService.cpp  OnsaleECService.h  OnsaleECService_server.skeleton.cpp  onsaleEC_constants.cpp  onsaleEC_constants.h  onsaleEC_types.cpp  onsaleEC_types.h  onsale_constants.cpp  onsale_constants.h
src/rpc/servers/onsale/sdk-py/: OnsaleAdminClient.py  OnsaleECClient.py  ThriftClient.py  benchmark_ec.py  test_admin.py  test_ec.py
src/rpc/servers/onsale/sdk-py/gen_py/onsale/: ttypes.py
src/rpc/servers/onsale/sdk-py/gen_py/onsaleAdmin/: OnsaleAdminService-remote  OnsaleAdminService.py  __init__.py  ttypes.py
src/rpc/servers/onsale/sdk-py/gen_py/onsaleEC/: OnsaleECService-remote  OnsaleECService.py  __init__.py  ttypes.py
src/third/: CMakeLists.txt
src/third/patch_glog/: 0001-redefine-the-format-of-log-file-name.patch  0002-output-to-a-new-file-per-hour.patch
(+10 files in other folders)
