SET(MODULE tinyxml2)

AUX_SOURCE_DIRECTORY(. SRCS)

ADD_LIBRARY(${MODULE}_static STATIC ${SRCS})
SET_TARGET_PROPERTIES(${MODULE}_static PROPERTIES OUTPUT_NAME "${MODULE}")
SET_TARGET_PROPERTIES(${MODULE}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(${MODULE}_shared SHARED ${SRCS})
SET_TARGET_PROPERTIES(${MODULE}_shared PROPERTIES OUTPUT_NAME "${MODULE}")
SET_TARGET_PROPERTIES(${MODULE}_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_CUSTOM_COMMAND(TARGET ${MODULE}_shared
    POST_BUILD
    COMMAND make install
    )

INSTALL(TARGETS ${MODULE}_static    ARCHIVE DESTINATION lib)
INSTALL(TARGETS ${MODULE}_shared    LIBRARY DESTINATION lib)
