include_directories("${PROJECT_SOURCE_DIR}/base")
include_directories("../")

add_executable(test_multi_table test_multi_table.cc )
target_link_libraries(test_multi_table couponEC)
target_link_libraries(test_multi_table couponAdmin)
target_link_libraries(test_multi_table libthrift.a)
target_link_libraries(test_multi_table libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_multi_table ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_multi_table PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_thrift_client test_thrift_client.cc )
target_link_libraries(test_thrift_client couponEC)
target_link_libraries(test_thrift_client couponAdmin)
target_link_libraries(test_thrift_client libthrift.a)
target_link_libraries(test_thrift_client libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_thrift_client ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_thrift_client PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_coupon_code test_coupon_code.cc )
target_link_libraries(test_coupon_code couponEC)
target_link_libraries(test_coupon_code couponAdmin)
target_link_libraries(test_coupon_code libthrift.a)
target_link_libraries(test_coupon_code libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_coupon_code ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_coupon_code PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_group_slug test_group_slug.cc )
target_link_libraries(test_group_slug couponEC)
target_link_libraries(test_group_slug couponAdmin)
target_link_libraries(test_group_slug libthrift.a)
target_link_libraries(test_group_slug libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_group_slug ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_group_slug PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_decode test_decode.cc )
target_link_libraries(test_decode couponEC)
target_link_libraries(test_decode couponAdmin)
target_link_libraries(test_decode libthrift.a)
target_link_libraries(test_decode libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_decode ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_decode PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_deslug test_deslug.cc )
target_link_libraries(test_deslug couponEC)
target_link_libraries(test_deslug couponAdmin)
target_link_libraries(test_deslug libthrift.a)
target_link_libraries(test_deslug libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_deslug ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_deslug PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_encode test_encode.cc )
target_link_libraries(test_encode couponEC)
target_link_libraries(test_encode couponAdmin)
target_link_libraries(test_encode libthrift.a)
target_link_libraries(test_encode libglog.a libhiredis.a mysqlclient_r)
target_link_libraries(test_encode ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_encode PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_xml test_xml.cc )
target_link_libraries(test_xml libtinyxml2.a)

add_executable(test_html5_printer test_html5_printer.cc )
target_link_libraries(test_html5_printer libtinyxml2.a)

add_executable(test_redismq test_redismq.cc )
target_link_libraries(test_redismq couponEC)
target_link_libraries(test_redismq couponAdmin)
target_link_libraries(test_redismq libthrift.a)
target_link_libraries(test_redismq libredismq.a libev.a libhiredis.a)
target_link_libraries(test_redismq libglog.a mysqlclient_r)
target_link_libraries(test_redismq ${ZLIB_LIBRARIES}  libthriftnb.a event rt pthread)
set_target_properties(test_redismq PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_p26 test_p26.cc )
set_target_properties(test_p26 PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_slug8 test_slug8.cc )
set_target_properties(test_slug8 PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_deslug8 test_deslug8.cc )
set_target_properties(test_deslug8 PROPERTIES COMPILE_FLAGS "-std=c++11")

add_executable(test_sort test_sort.cc )
set_target_properties(test_sort PROPERTIES COMPILE_FLAGS "-std=c++11")

INSTALL(TARGETS test_multi_table            RUNTIME DESTINATION bin)
INSTALL(TARGETS test_thrift_client          RUNTIME DESTINATION bin)
INSTALL(TARGETS test_coupon_code            RUNTIME DESTINATION bin)
INSTALL(TARGETS test_group_slug             RUNTIME DESTINATION bin)
INSTALL(TARGETS test_decode                 RUNTIME DESTINATION bin)
INSTALL(TARGETS test_deslug                 RUNTIME DESTINATION bin)
INSTALL(TARGETS test_encode                 RUNTIME DESTINATION bin)
INSTALL(TARGETS test_xml                    RUNTIME DESTINATION bin)
INSTALL(TARGETS test_html5_printer          RUNTIME DESTINATION bin)
INSTALL(TARGETS test_redismq                RUNTIME DESTINATION bin)
INSTALL(TARGETS test_p26                	RUNTIME DESTINATION bin)
INSTALL(TARGETS test_slug8                	RUNTIME DESTINATION bin)
INSTALL(TARGETS test_deslug8                RUNTIME DESTINATION bin)
INSTALL(TARGETS test_sort                	RUNTIME DESTINATION bin)


